--- a/CustomControls/App.xaml
+++ b/CustomControls/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="CustomizedControls.App"
+﻿<Application x:Class="CustomControls.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CustomizedControls"
+             xmlns:local="clr-namespace:CustomControls"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
