--- a/CustomControls/MainWindow.xaml
+++ b/CustomControls/MainWindow.xaml
@@ -1,9 +1,12 @@
-﻿<Window x:Class="CustomizedControls.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CustomizedControls"
+        xmlns:local="clr-namespace:CustomControls"
+        xmlns:MFCControls="clr-namespace:CustomizedUserControls.MFCControls;assembly=CustomizedUserControls" 
+    xmlns:CustomizedUserControls="clr-namespace:CustomizedUserControls;assembly=CustomizedUserControls" 
+x:Class="CustomControls.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="768" Width="1072">
     <Grid Background="AliceBlue">
@@ -23,6 +26,9 @@
         </Grid>
         <Canvas x:Name="shapeCanvas" AllowDrop="True" Background="White" 
                 Grid.Row="1" Width="1072" Height="500" HorizontalAlignment="Stretch" 
-                VerticalAlignment="Stretch" ClipToBounds="True"/>
+                VerticalAlignment="Stretch" ClipToBounds="True">
+            <MFCControls:MFCControl Canvas.Left="377" Canvas.Top="350"/>
+            <CustomizedUserControls:ValveControl Canvas.Left="697" Canvas.Top="278"/>
+        </Canvas>
     </Grid>
 </Window>
