--- a/CustomizedUserControls/MFCControls/RangeWindow.xaml
+++ b/CustomizedUserControls/MFCControls/RangeWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomizedUserControls.MFCControls"
         mc:Ignorable="d" MinHeight="130"
-        MinWidth="300"
+        MinWidth="400"
         FocusManager.FocusedElement="{Binding ElementName=minRangeTxtBox}"
         Title="Range Dialog" ResizeMode="NoResize" WindowStartupLocation="CenterOwner"
         SizeToContent="WidthAndHeight" ShowInTaskbar="False">
@@ -32,12 +32,16 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="Minimum Range:" />
-        <TextBox x:Name="minRangeTxtBox" Grid.Row="0" Grid.Column="1"/>
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="Maximum Range:"/>
-        <TextBox x:Name="maxRangeTxtBox" Grid.Row="1" Grid.Column="1" />
-        <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Min Value:" />
+        <TextBox x:Name="minRangeTxtBox" Grid.Row="0" Grid.Column="1" />
+        <TextBlock Grid.Row="0" Grid.Column="2" Text="Max Value:"/>
+        <TextBox x:Name="maxRangeTxtBox" Grid.Row="0" Grid.Column="3" />
+        <TextBlock Grid.Row="1" Grid.Column="0" Text="Current Value:" />
+        <TextBox x:Name="currentValueTxtBox" Grid.Row="1" Grid.Column="1" />
+        <StackPanel Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Name="okBtn" IsDefault="True">OK</Button>
             <Button Name="cancelBtn" IsCancel="True">Cancel</Button>
         </StackPanel>
